--- a/src/main/resources/templates/associate.html
+++ b/src/main/resources/templates/associate.html
@@ -96,7 +96,7 @@
 <div class="associado">
         <div class="header">
             <div class="profile-photo" th:if="${associate.associatePhoto != null}"></div>
-            <h1>Sindicato Rural de Brumado</h1>
+            <h1>Sindicato Dos Trabalhadores, Trabalhadoras Rurais, Agricultores E Agricultoras Familiares Do Município De Brumado-Bahia</h1>
         </div>
         <div class="section">
             <h2>Associado</h2>
