--- a/src/main/resources/templates/monthly_fee_report.jrxml
+++ b/src/main/resources/templates/monthly_fee_report.jrxml
@@ -120,14 +120,14 @@ where mf.id = $P{monthlyFeeId}]]>
                     </textElement>
                     <text><![CDATA[Recibo de Mensalidade]]></text>
                 </staticText>
-                <textField textAdjust="ScaleFont">
+                <textField textAdjust="ScaleFont" isBlankWhenNull="true">
                     <reportElement x="600" y="20" width="102" height="20" uuid="681f305b-af79-4e62-bd5d-5cfa9d76a6a2">
                         <property name="com.jaspersoft.studio.unit.height" value="px"/>
                     </reportElement>
-                    <textElement textAlignment="Right">
+                    <textElement textAlignment="Right" markup="none">
                         <font size="14" isBold="true"/>
                     </textElement>
-                    <textFieldExpression><![CDATA["N°" + $F{monthly_fee_id}]]></textFieldExpression>
+                    <textFieldExpression><![CDATA["N°" + NumberFormat.getNumberInstance(new Locale("pt", "BR")).format($F{monthly_fee_id})]]></textFieldExpression>
                 </textField>
                 <staticText>
                     <reportElement x="80" y="60" width="320" height="20" uuid="f68b9fba-396c-4009-9299-f34f347fc6a9"/>
@@ -146,7 +146,7 @@ where mf.id = $P{monthlyFeeId}]]>
                         <bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
                         <rightPen lineWidth="0.0" lineStyle="Dotted" lineColor="#000000"/>
                     </box>
-                    <textElement verticalAlignment="Bottom">
+                    <textElement verticalAlignment="Bottom" markup="none">
                         <font size="12"/>
                     </textElement>
                     <textFieldExpression><![CDATA[$F{name}]]></textFieldExpression>
@@ -170,7 +170,7 @@ where mf.id = $P{monthlyFeeId}]]>
                         <bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
                         <rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
                     </box>
-                    <textElement verticalAlignment="Bottom">
+                    <textElement verticalAlignment="Bottom" markup="none">
                         <font size="12"/>
                     </textElement>
                     <textFieldExpression><![CDATA[NumberFormat.getNumberInstance(new Locale("pt", "BR")).format($F{union_card})]]></textFieldExpression>
@@ -196,7 +196,7 @@ where mf.id = $P{monthlyFeeId}]]>
                         <bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
                         <rightPen lineWidth="0.0" lineStyle="Dotted" lineColor="#000000"/>
                     </box>
-                    <textElement verticalAlignment="Bottom">
+                    <textElement verticalAlignment="Bottom" markup="none">
                         <font size="12"/>
                     </textElement>
                     <textFieldExpression><![CDATA[$F{neighborhood}]]></textFieldExpression>
@@ -222,7 +222,7 @@ where mf.id = $P{monthlyFeeId}]]>
                         <bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
                         <rightPen lineWidth="0.0" lineStyle="Dotted" lineColor="#000000"/>
                     </box>
-                    <textElement verticalAlignment="Bottom">
+                    <textElement verticalAlignment="Bottom" markup="none">
                         <font size="12"/>
                     </textElement>
                     <textFieldExpression><![CDATA[$F{complement}]]></textFieldExpression>
@@ -246,7 +246,7 @@ where mf.id = $P{monthlyFeeId}]]>
                         <bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
                         <rightPen lineWidth="0.0" lineStyle="Dotted" lineColor="#000000"/>
                     </box>
-                    <textElement verticalAlignment="Bottom">
+                    <textElement verticalAlignment="Bottom" markup="none">
                         <font size="12"/>
                     </textElement>
                     <textFieldExpression><![CDATA[$F{zip_code}.replaceFirst("(\\d{5})(\\d{3})", "$1-$2")]]></textFieldExpression>
@@ -274,7 +274,7 @@ where mf.id = $P{monthlyFeeId}]]>
                             <bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
                             <rightPen lineWidth="0.0" lineStyle="Dotted" lineColor="#000000"/>
                         </box>
-                        <textElement verticalAlignment="Bottom">
+                        <textElement verticalAlignment="Bottom" markup="none">
                             <font size="12"/>
                         </textElement>
                         <textFieldExpression><![CDATA[$F{city}]]></textFieldExpression>
@@ -300,7 +300,7 @@ where mf.id = $P{monthlyFeeId}]]>
                             <bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
                             <rightPen lineWidth="0.0" lineStyle="Dotted" lineColor="#000000"/>
                         </box>
-                        <textElement verticalAlignment="Bottom">
+                        <textElement verticalAlignment="Bottom" markup="none">
                             <font size="12"/>
                         </textElement>
                         <textFieldExpression><![CDATA[$F{street}]]></textFieldExpression>
@@ -326,7 +326,7 @@ where mf.id = $P{monthlyFeeId}]]>
                             <bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
                             <rightPen lineWidth="0.0" lineStyle="Dotted" lineColor="#000000"/>
                         </box>
-                        <textElement verticalAlignment="Bottom">
+                        <textElement verticalAlignment="Bottom" markup="none">
                             <font size="12"/>
                         </textElement>
                         <textFieldExpression><![CDATA[$F{number}]]></textFieldExpression>
@@ -334,14 +334,14 @@ where mf.id = $P{monthlyFeeId}]]>
                 </frame>
                 <frame>
                     <reportElement x="80" y="240" width="622" height="40" uuid="dc28336b-360a-488a-bf96-3f2d6148ba00"/>
-                    <textField textAdjust="ScaleFont" pattern="MM/yyyy">
+                    <textField textAdjust="ScaleFont" pattern="MM/yyyy" isBlankWhenNull="true">
                         <reportElement x="0" y="20" width="74" height="20" uuid="7531f82a-3e54-48db-ab7e-ccdcf8aa9cac">
                             <property name="com.jaspersoft.studio.unit.height" value="px"/>
                         </reportElement>
                         <box>
                             <bottomPen lineWidth="1.0" lineStyle="Solid"/>
                         </box>
-                        <textElement verticalAlignment="Bottom">
+                        <textElement verticalAlignment="Bottom" markup="none">
                             <font size="12"/>
                         </textElement>
                         <textFieldExpression><![CDATA[$F{initial_date}]]></textFieldExpression>
@@ -355,14 +355,14 @@ where mf.id = $P{monthlyFeeId}]]>
                         </textElement>
                         <text><![CDATA[Mês Inicial]]></text>
                     </staticText>
-                    <textField textAdjust="ScaleFont" pattern="MM/yyyy">
+                    <textField textAdjust="ScaleFont" pattern="MM/yyyy" isBlankWhenNull="true">
                         <reportElement x="105" y="20" width="74" height="20" uuid="69f2c5f9-aff2-4c51-866b-1fc331636b74">
                             <property name="com.jaspersoft.studio.unit.height" value="px"/>
                         </reportElement>
                         <box>
                             <bottomPen lineWidth="1.0" lineStyle="Solid"/>
                         </box>
-                        <textElement verticalAlignment="Bottom">
+                        <textElement verticalAlignment="Bottom" markup="none">
                             <font size="12"/>
                         </textElement>
                         <textFieldExpression><![CDATA[$F{final_date}]]></textFieldExpression>
@@ -376,14 +376,14 @@ where mf.id = $P{monthlyFeeId}]]>
                         </textElement>
                         <text><![CDATA[Mês Final]]></text>
                     </staticText>
-                    <textField textAdjust="ScaleFont">
+                    <textField textAdjust="ScaleFont" isBlankWhenNull="true">
                         <reportElement x="210" y="20" width="116" height="20" uuid="98c2623c-18aa-470e-962a-8caf08b1564d">
                             <property name="com.jaspersoft.studio.unit.height" value="px"/>
                         </reportElement>
                         <box>
                             <bottomPen lineWidth="1.0" lineStyle="Solid"/>
                         </box>
-                        <textElement verticalAlignment="Bottom">
+                        <textElement verticalAlignment="Bottom" markup="none">
                             <font size="12"/>
                         </textElement>
                         <textFieldExpression><![CDATA[NumberFormat.getCurrencyInstance(new Locale("pt", "BR")).format($F{registration_value})]]></textFieldExpression>
@@ -397,7 +397,7 @@ where mf.id = $P{monthlyFeeId}]]>
                         </textElement>
                         <text><![CDATA[Taxa de Inscrição]]></text>
                     </staticText>
-                    <textField textAdjust="ScaleFont">
+                    <textField textAdjust="ScaleFont" isBlankWhenNull="true">
                         <reportElement x="357" y="20" width="116" height="20" uuid="20e69ebd-06a9-4238-b278-0f1ab75a3f9f">
                             <property name="com.jaspersoft.studio.unit.height" value="px"/>
                             <property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -405,7 +405,7 @@ where mf.id = $P{monthlyFeeId}]]>
                         <box>
                             <bottomPen lineWidth="1.0" lineStyle="Solid"/>
                         </box>
-                        <textElement verticalAlignment="Bottom">
+                        <textElement verticalAlignment="Bottom" markup="none">
                             <font size="12"/>
                         </textElement>
                         <textFieldExpression><![CDATA[NumberFormat.getCurrencyInstance(new Locale("pt", "BR")).format($F{fee_value})]]></textFieldExpression>
@@ -420,7 +420,7 @@ where mf.id = $P{monthlyFeeId}]]>
                         </textElement>
                         <text><![CDATA[Mensalidade]]></text>
                     </staticText>
-                    <textField textAdjust="ScaleFont">
+                    <textField textAdjust="ScaleFont" isBlankWhenNull="true">
                         <reportElement x="506" y="20" width="116" height="20" uuid="b4c84190-2e5a-4b70-ac52-1a2f4433ed04">
                             <property name="com.jaspersoft.studio.unit.height" value="px"/>
                             <property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -428,7 +428,7 @@ where mf.id = $P{monthlyFeeId}]]>
                         <box>
                             <bottomPen lineWidth="1.0" lineStyle="Solid"/>
                         </box>
-                        <textElement verticalAlignment="Bottom">
+                        <textElement verticalAlignment="Bottom" markup="none">
                             <font size="12"/>
                         </textElement>
                         <textFieldExpression><![CDATA[NumberFormat.getCurrencyInstance(new Locale("pt", "BR")).format($F{total_fee_value})]]></textFieldExpression>
